--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "noImplicitAny": true,
         "moduleResolution": "node",
         "sourceMap": true,
+        "outDir": "lib",
         "baseUrl": ".",
         "declaration": true,
         "strict": true,
