--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "types": "./lib/index.d.ts",
     "scripts": {
         "dev": "vite",
-        "build": "vite build --config vite.config.lib.js && tsc --emitDeclarationOnly && vite build",
+        "build": "vite build --config vite.config.lib.js && tsc --emitDeclarationOnly",
         "build:vite": "vite build",
         "preview": "vite preview",
         "prepublish": "npm run build"
